kubernetes/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tempconverter
  namespace: tempconverter

spec:
  replicas: 2

  selector:
    matchLabels:
      app: tempconverter

  template:
    metadata:
      labels:
        app: tempconverter

    spec:

      containers:
        - name: tempconverter
          image: docker.io/ksrenk/tempconverter:dev

          ports:
            - containerPort: 5000

          readinessProbe:
            httpGet:
              path: /
              port: 5000
            initialDelaySeconds: 5
            periodSeconds: 5

      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: app
                    operator: In
                    values:
                      - tempconverter
              topologyKey: kubernetes.io/hostname

---
apiVersion: v1
kind: Service
metadata:
  name: tempconverter
  namespace: tempconverter

spec:
  selector:
    app: tempconverter

  ports:
    - port: 80
      targetPort: 5000
